@@ -3,7 +3,7 @@
 ./autogen.sh
 ./configure (optional if just after autogen.sh)
 make
-make install
+make instal
 
 You can use the --prefix option of the configure script to force installation
 in some place (default is /usr/local/DCMlib):
