@@ -1,0 +1,5 @@
+.deps
+.libs
+Makefile.in
+Makefile
+vtkgdcmdemo
